take over changes by BJanev